Remove unused public folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Recipe Generator</title>
     <meta name="description" content="A modern recipe generator app" />
     <meta name="author" content="" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/images/chef.png" />
   </head>
 
   <body>
